--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
     "nouislider": "^15.7.1",
+    "pino-pretty": "^11.0.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-table": "^7.8.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "thirdweb": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
