remove thirdweb sdk and finish custom connect wallet btn

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/providers": "^16.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "apexcharts": "^3.45.2",
     "dropzone": "^6.0.0-beta.2",
+    "ethers": "^5.7.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
@@ -23,7 +25,6 @@
     "react-table": "^7.8.0",
     "swiper": "^11.0.5",
     "swr": "^2.2.5",
-    "thirdweb": "0.0.0-dev-20ec56b0196286c0703a6d94f5d38892ce8cc258-20240412152145",
     "web3": "^4.7.0"
   },
   "devDependencies": {
