--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "genContractType": "abi-types-generator './public/contracts/CarbonMarket.json' --output='./src/types' --name=carbonMarketContract --provider=ethers_v5"
   },
   "dependencies": {
     "@metamask/providers": "^16.0.0",
@@ -35,6 +36,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "ethereum-abi-types-generator": "^1.3.4",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
