--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "genContractType": "abi-types-generator './public/contracts/CarbonMarket.json' --output='./src/types' --name=carbonMarketContract --provider=ethers_v5"
+    "genContractType:CarbonMarket": "abi-types-generator './public/contracts/CarbonMarket.json' --output='./src/types' --name=CarbonMarketContract --provider=ethers_v5",
+    "genContractType:CarbonToken": "abi-types-generator './public/contracts/CarbonToken.json' --output='./src/types' --name=CarbonTokenContract --provider=ethers_v5",
+    "genContractType:ProjectManagement": "abi-types-generator './public/contracts/ProjectManagement.json' --output='./src/types' --name=ProjectManagementContract --provider=ethers_v5",
+    "genContractTypes": "npm run genContractType:CarbonMarket && npm run genContractType:CarbonToken && npm run genContractType:ProjectManagement"
   },
   "dependencies": {
     "@metamask/providers": "^16.0.0",
