--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     },
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/common/CreditContext.ts"],
   "exclude": ["node_modules"]
 }
