pin file to pinata successfully

--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@metamask/providers": "^16.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "apexcharts": "^3.45.2",
+    "axios": "^1.6.8",
     "dropzone": "^6.0.0-beta.2",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^5.7.2",
     "flatpickr": "^4.6.13",
+    "form-data": "^4.0.0",
+    "iron-session": "^8.0.1",
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
     "nouislider": "^15.7.1",
@@ -30,6 +34,7 @@
     "swiper": "^11.0.5",
     "swr": "^2.2.5",
     "truffle-contract-size": "^2.0.1",
+    "uuid": "^9.0.1",
     "web3": "^4.7.0"
   },
   "devDependencies": {
@@ -37,6 +42,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-table": "^7.7.19",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
