--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.5",
     "swr": "^2.2.5",
     "truffle-contract-size": "^2.0.1",
