--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "genContractType:CarbonToken": "abi-types-generator './public/contracts/CarbonToken.json' --output='./src/types' --name=CarbonTokenContract --provider=ethers_v5",
     "genContractType:ProjectManagement": "abi-types-generator './public/contracts/ProjectManagement.json' --output='./src/types' --name=ProjectManagementContract --provider=ethers_v5",
     "genContractType:AccountManagement": "abi-types-generator './public/contracts/AccountManagement.json' --output='./src/types' --name=AccountManagementContract --provider=ethers_v5",
-    "genContractTypes": "npm run genContractType:CarbonMarket && npm run genContractType:CarbonToken && npm run genContractType:ProjectManagement && npm run genContractType:AccountManagement"
+    "genContractType:Retirement": "abi-types-generator './public/contracts/Retirement.json' --output='./src/types' --name=RetirementContract --provider=ethers_v5",
+    "genContractTypes": "npm run genContractType:CarbonMarket && npm run genContractType:CarbonToken && npm run genContractType:ProjectManagement && npm run genContractType:AccountManagement && npm run genContractType:Retirement"
   },
   "dependencies": {
     "@metamask/providers": "^16.0.0",
